[package]
name = "hostess"
version = "0.1.0-beta"
authors = ["chaixb <1481569358@qq.com>"]
edition = "2018"
license = "MIT"
description = "A tool to maintain hosts"
homepage = "https://github.com/chaixb/hostess"
repository = "https://github.com/chaixb/hostess"


[lib]
name = "hostess"
path = "src/lib.rs"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
pad = "0.1.5"

[features]
