[package]
name = "hostess"
version = "0.2.4"
authors = ["aliast"]
edition = "2018"
license = "MIT"
description = "A tool to maintain hosts"
homepage = "https://github.com/chaixb/hostess"
repository = "https://github.com/chaixb/hostess"


[lib]
name = "hostess"
path = "src/lib.rs"

[dependencies]
structopt = "0.3"
pad = "0.1.5"
yansi = "0.5.0"

[features]
